Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

Fixed
~~~~~

- Bug in upload for Python3
- Bug with getting the file size when there are redirects (issue #8)


0.3.2 - 2017-10-15
------------------

Fixed
~~~~~

- Bug in the the create_object function in the selection of the non-history object
- Bug in the setting of project properties (due to the lack of a parent)

0.3.1 - 2017-09-04
------------------

Changed
~~~~~~~

- FileData now has an id and path, the id is the filename and the path is the
  path relative from the resource. This makes working with subdirectories in
  resources possible.

Fixed
~~~~~

- Bug where history of XNAT was misinterpreted and an old version of an object could be loaded
- Resources could loose track of their ID when the cache was cleared
- Resources did not invalidate cache after uploading files


0.3.0 - 2017-08-17
------------------

Added
~~~~~

- Better support for complex data structures, especially data types that
  include lists in their data.
- Support for extension types, xnatpy automatically searches for all extension
  xsd files and will create Python classes for those as well.
- Listings can be indexed with integers to get their n-th element, the order
  is the order given by XNAT.
- Allow overwriting of files on upload
- Support for listing users via /data/users REST endpoint in the session.users

Changed
~~~~~~~

- xsd schema parsing is completely rewritten, allows more support for complex
  data structures

Fixed
~~~~~

- Support for XNAT 1.7.3
- Fixed a bug where opening a second session would ruin the first one, it
  should now be possible to have multiple sessions open concurently.


0.2.3 - 2017-04-03
------------------

Added
~~~~~
